--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,7 +23,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(247, 254, 255, 0) 0%, rgba(9, 9, 9, 1) 100%);
+    background: linear-gradient(90deg, rgba(247, 254, 255, 0) 0%, rgb(0, 0, 0) 100%);
 }
 
 .wrapForm {
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--black);
+    background-color: black;
     color: var(--white);
 }
 
